--- a/.github/workflows/raffle.yml
+++ b/.github/workflows/raffle.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/setup-go@v3
 
       - name: Install ethier
-        run: go install github.com/divergencetech/ethier/ethier@latest
+        run: go install github.com/divergencetech/ethier/ethier@v0.35.3
 
       - name: Run
         run: |
