--- a/.github/workflows/gotests.yml
+++ b/.github/workflows/gotests.yml
@@ -11,6 +11,8 @@ jobs:
 
       - name: Setup Go
         uses: actions/setup-go@v3
+        with:
+          go-version: '^1.19.0'
 
       - name: Test
         run: go test ...
